deploy/ingress_webapp/webapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
