deploy/ingress_webapp/back-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - host: task-list  # set /etc/host correctly to map with minikube ip or external ip
      http:
        paths:
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: webtasks-service
                port:
                  number: 3000
